// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="mocked-styled-2"
>
  <div
    class="mocked-styled-4"
  >
    <span
      class="mocked-styled-5"
    >
      0
    </span>
    <span
      class="mocked-styled-6"
    >
      42
    </span>
  </div>
  <button
    class="mocked-styled-1 mocked-styled-0"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="mocked-styled-2"
>
  <div
    class="mocked-styled-3"
  >
    🛌🛌
  </div>
  <button
    class="mocked-styled-1 mocked-styled-0"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="mocked-styled-2"
>
  <div
    class="mocked-styled-3"
  >
    🍅
  </div>
  <button
    class="mocked-styled-1 mocked-styled-0"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="mocked-styled-2"
>
  <div
    class="mocked-styled-3"
  >
    🛌
  </div>
  <button
    class="mocked-styled-1 mocked-styled-0"
  >
    Start
  </button>
</div>
`;
